--- a/package.json
+++ b/package.json
@@ -4,8 +4,30 @@
   "description": "Fullstack engineer exercise #2 - Server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./index.js",
+    "pretty": "npx prettier --write .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "author": "Lucas Del Pozzi",
-  "license": "ISC"
-}
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.6.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-mocha": "^8.0.0",
+    "nodemon": "^1.18.7",
+    "prettier": "^1.19.1",
+    "prettier-eslint": "^8.8.1"
+  },
+  "engines": {
+    "node": ">=14.15.1",
+    "npm": ">=6.14.9"
+  }
