--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "ioredis": "^4.19.4",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
@@ -31,3 +32,4 @@
     "node": ">=14.15.1",
     "npm": ">=6.14.9"
   }
+}
