--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Lucas Del Pozzi",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
+    "axios-retry": "^3.1.9",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
