--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./index.js",
+    "test": "npx mocha --reporter spec",
     "pretty": "npx prettier --write .",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
@@ -22,13 +23,16 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-mocha": "^8.0.0",
     "nodemon": "^1.18.7",
     "prettier": "^1.19.1",
-    "prettier-eslint": "^8.8.1"
+    "prettier-eslint": "^8.8.1",
+    "uuid": "^8.3.2"
   },
   "engines": {
     "node": ">=14.15.1",
